--- a/requirements.txt
+++ b/requirements.txt
@@ -87,7 +87,7 @@ scipy==1.3.1
 Send2Trash==1.5.0
 Shapely==1.6.4.post2
 six==1.11.0
-SQLAlchemy==1.3.10
+sqlalchemy==1.3.10
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.3
